added date to html

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         </button>
       </div>
 
+      <h1 id="current-day"></h1>
+      <table>
+        <!-- Calendar table here -->
+      </table>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
